TellarknightApp/Components/Pages/Home.razor.css
html, body {
    margin: 0;
    padding: 0;
    overflow: hidden;
}

.logo {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

    .logo img {
        width: 100%;
        height: 100%;
        max-height: 35vh;
        object-fit: contain;
    }

/* =========================
   GRID
========================= */

.app-grid-container {
    display: grid;
    grid-template-rows: 50px auto 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    row-gap: 5px;
    column-gap: 5px;
    height: 100%;
    width: 100%;
    box-sizing: border-box;
}

.grid-button1 {
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    overflow: hidden;
}

.grid-button2 {
    grid-row: 1 / span 1;
    grid-column: 2 / span 1;
    overflow: hidden;
}

.grid-button3 {
    grid-row: 1 / span 1;
    grid-column: 3 / span 1;
    overflow: hidden;
}

.grid-logo {
    grid-row: 2 / span 1;
    grid-column: 1 / span 3;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    background: white;
    border-radius: 5px;
}

.grid-news {
    grid-row: 3 / span 1;
    grid-column: 1 / span 3;
    overflow: auto;
    border-radius: 5px;
}

/* =========================
   NEWS
========================= */

.news-container {
    display: flex;
    flex-direction: column;
    gap: 5px;
    padding-left: 10px;
    padding-right: 10px;
    font-size: 0.85rem;
    color: #bebebe
}

.news-title {
    font-size: 1rem;
    font-weight: bold;
}

.news-entry {
    padding: 10px;
    background: rgba(255, 255, 255, 0.04);
    transition: background 0.15s ease;
}

    .news-entry:hover {
        background: rgba(255, 255, 255, 0.08);
    }

.news-header-row {
    display: flex;
    align-items: center;
    gap: 10px;
}

.news-header {
    font-weight: 700;
}

